Bug 1934619 - Make Element::GetElementsWithGrid go through `display: contents` elements. r=layout-reviewers,emilio.

Differential Revision: https://phabricator.services.mozilla.com/D230799